# rust-zlt

./: .gitignore  Cargo.toml  README.md  user-autostart.sh  user-uninstall.sh
.cargo/: config.patch.toml  config.toml
.github/: README.md
.github/workflows/: build-msi.yml  release.yml
.windsurf/rules/: rust.md
installer-script/: com.zlt.service.plist  install.sh  uninstall.sh  zlt.service
src/: auth.rs  auto_update.rs  config.rs  connectivity.rs  encryption.rs  file_server.rs  main.rs  monitoring.rs  ngrok.rs  notification.rs  stealth.rs  utils.rs
templates/: dashboard.html  directory.html  login.html
wix/: README.md  license.rtf  main.wxs  wix.toml
