[package]
name = "zlt"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
actix-files = "0.6.2"
actix-multipart = "0.6.0"
futures = "0.3.28"
tokio = { version = "1.29.1", features = ["full"] }
reqwest = { version = "0.11.18", features = ["json", "multipart", "blocking"] }
aes-gcm = "0.10.2"
rand = "0.8.5"
rand_chacha = "0.3.1"
base64 = "0.21.2"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
log = "0.4.19"
env_logger = "0.10.0"
chrono = "0.4.26"
sha2 = "0.10.7"
zip = "0.6.6"
askama = "0.12.0"
askama_actix = "0.14.0"
async-trait = "0.1.68"
bytes = "1.4.0"
mime = "0.3.17"
mime_guess = "2.0.4"
async-std = "1.12.0"
tempfile = "3.6.0"
urlencoding = "2.1.2"
regex = "1.8.4"
sha-1 = "0.10.1"
path-absolutize = "3.1.0"
uuid = { version = "1.3.4", features = ["v4"] }
once_cell = "1.18.0"
sanitize-filename = "0.4.0"
derive_more = "0.99.17"
dotenv = "0.15.0"
thiserror = "1.0.40"
anyhow = "1.0.71"
